--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <groupId>com.ithub</groupId>
   <artifactId>devopmaven</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <name>devopmaven</name>
   <!-- FIXME change it to the project's website -->
